Refactor folder structure and module dependenceis

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/pneuly/whisper-asr-colab/blob/main/whisper_asr_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/pneuly/whisper-asr-colab/blob/develop/whisper_asr_colab.ipynb\" target=\"_blank\" rel=\"noopener\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -18,76 +18,174 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import logging\n",
     "import locale\n",
-    "from torch.cuda import empty_cache\n",
+    "import functools\n",
     "from google.colab import files\n",
     "\n",
     "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
+    "os.environ[\"UV_PRERELEASE\"] = \"if-necessary-or-explicit\"\n",
+    "os.environ[\"UV_SYSTEM_PYTHON\"] = \"true\"\n",
+    "os.environ[\"UV_NO_PROGRESS\"] = \"true\"\n",
+    "for var in [\"UV_BUILD_CONSTRAINT\", \"UV_CONSTRAINT\"]:\n",
+    "    os.environ.pop(var, None)\n",
     "\n",
-    "# @title Faster-Whisper Implementation on Google Colab{ display-mode: \"form\" }\n",
+    "# Avoid unnecessary downgrades\n",
+    "with open(\"override.txt\", \"w\") as f:\n",
+    "    f.writelines(\"\"\"nvidia-cudnn-cu12\n",
+    "nvidia-cublas-cu12\n",
+    "nvidia-cuda-cupti-cu12\n",
+    "nvidia-cuda-nvrtc-cu12\n",
+    "nvidia-cuda-runtime-cu12\n",
+    "nvidia-cufft-cu12\n",
+    "nvidia-curand-cu12\n",
+    "nvidia-cusolver-cu12\n",
+    "nvidia-cusparse-cu12\n",
+    "nvidia-nvjitlink-cu12\n",
+    "nvidia-nccl-cu12\n",
+    "numpy\n",
+    "opentelemetry-api\n",
+    "opentelemetry-sdk\n",
+    "opentelemetry-semantic-conventions\n",
+    "opentelemetry-exporter-otlp-proto-common\n",
+    "opentelemetry-exporter-otlp-proto-http\n",
+    "opentelemetry-proto\n",
+    "\"\"\")\n",
+    "os.environ[\"UV_OVERRIDE\"] = \"override.txt\"\n",
+    "\n",
     "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
+    "password = \"\"  # @param {type:\"string\"}\n",
+    "download_format = \"mp3\"  # @param [\"\", \"mp3\", \"m4a\", \"aac\", \"vorbis\", \"opus\", \"wav\"] {allow-input: true}\n",
     "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
     "diarization = True  # @param {type:\"boolean\"}\n",
-    "password = \"\"  # @param {type:\"string\"}\n",
     "start_time = \"\"  # @param {type:\"string\"}\n",
     "end_time = \"\"  # @param {type:\"string\"}\n",
     "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
     "skip_silence = True  # @param {type:\"boolean\"}\n",
-    "hotwords = \"\" # @param {type:\"string\"}\n",
-    "batch_size = 1 # @param {type:\"number\"}\n",
-    "realtime = False  # @param {type:\"boolean\"}\n",
-    "HUGGING_FACE_TOKEN = \"\"\n",
+    "hotwords = \"\" #  {type:\"string\"}\n",
+    "batch_size = 1 #  {type:\"number\"}\n",
+    "realtime = False  #  {type:\"boolean\"}\n",
+    "HUGGING_FACE_TOKEN = \"\"  # @param {type:\"string\"}\n",
     "initial_prompt = \"\"\n",
     "prefix = None\n",
     "vad_filter = False\n",
+    "files_to_download = []\n",
     "\n",
     "# ----- main routine ------\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
     "logger = logging.getLogger(__name__)\n",
-    "logger.setLevel(logging.WARNING)\n",
+    "#logger.setLevel(logging.DEBUG)\n",
     "if not logger.hasHandlers():\n",
     "    logger.addHandler(logging.StreamHandler())\n",
     "\n",
     "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
-    "    raise ValueError(\"Input your token to hf_token (https://huggingface.co/pyannote/speaker-diarization)\")\n",
+    "    raise ValueError(\"Input your token to HUGGING_FACE_TOKEN (https://huggingface.co/pyannote/speaker-diarization)\")\n",
     "\n",
-    "if audio == \"\":\n",
-    "    audio = list(files.upload())[0]\n",
+    "def remote_log_deco(session_id):\n",
+    "    def deco(func):\n",
+    "        @functools.wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            result = func(*args, **kwargs)\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "    return deco\n",
     "\n",
-    "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
-    "!pip install ctranslate2==4.4.0\n",
-    "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
-    "from whisper_asr_colab.audio import Audio  # noqa: E402\n",
+    "def _transcribe(audio):\n",
+    "    from whisper_asr_colab.asr import ASRWorker\n",
+    "    worker = ASRWorker(\n",
+    "        audio=audio,\n",
+    "        load_model_args={\"model_size_or_path\" : model_size,},\n",
+    "        transcribe_args={\n",
+    "            \"language\" : \"ja\",\n",
+    "            \"initial_prompt\" : initial_prompt,\n",
+    "            \"batch_size\" : batch_size,\n",
+    "            \"hotwords\" : hotwords,\n",
+    "            \"prefix\" : prefix,\n",
+    "            \"vad_filter\" : False,}\n",
+    "    )\n",
     "\n",
-    "audio = Audio.from_path_or_url(audio)\n",
-    "if start_time:\n",
-    "    audio.start_time = start_time\n",
-    "if end_time:\n",
-    "    audio.end_time = end_time\n",
+    "    if timestamp_offset:\n",
+    "        worker.timestamp_offset = timestamp_offset\n",
+    "    results = worker.run()\n",
+    "    # gc GPU RAM\n",
+    "    del worker\n",
+    "    return results\n",
     "\n",
-    "worker = Worker(\n",
-    "    audio=audio,\n",
-    "    model_size=model_size,\n",
-    "    language=\"en\",\n",
-    "    diarization=diarization,\n",
-    "    password=password,\n",
-    "    initial_prompt=initial_prompt,\n",
-    "    realtime=realtime,\n",
-    "    batch_size=batch_size,\n",
-    "    hugging_face_token=HUGGING_FACE_TOKEN,\n",
-    "    hotwords=hotwords,\n",
-    "    prefix=prefix,\n",
-    "    vad_filter=False,\n",
-    "    skip_silence=skip_silence,\n",
-    ")\n",
-    "if timestamp_offset:\n",
-    "    worker.timestamp_offset = timestamp_offset\n",
     "\n",
-    "worker.run()\n",
+    "def _diarize():\n",
+    "    !uv pip install pyannote.audio\n",
+    "    from whisper_asr_colab.diarize import DiarizationWorker # noqa: E402\n",
+    "    from torch.cuda import empty_cache\n",
+    "    empty_cache()\n",
+    "    diarizer = DiarizationWorker(\n",
+    "        audio=audio,\n",
+    "        hugging_face_token = HUGGING_FACE_TOKEN,\n",
+    "        )\n",
+    "    return diarizer.run()\n",
     "\n",
-    "# gc GPU RAM\n",
-    "del worker\n",
-    "empty_cache()\n"
+    "\n",
+    "def _convert_audio_if_needed():\n",
+    "    from whisper_asr_colab.audio import convert_audio\n",
+    "    return convert_audio(audio.local_file_path, download_format)\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    !uv pip install git+https://github.com/pneuly/whisper-asr-colab.git@develop\n",
+    "\n",
+    "    from whisper_asr_colab.audio import Audio # noqa: E402\n",
+    "    from whisper_asr_colab.common import unzip_with_password, process_isolator\n",
+    "    from whisper_asr_colab.asr import ASR_PROGRESS_FILE\n",
+    "    from faster_whisper.utils import download_model\n",
+    "\n",
+    "    if audio == \"\":\n",
+    "        audio = list(files.upload())[0]\n",
+    "\n",
+    "    if isinstance(audio, str) and audio.endswith('.zip'):\n",
+    "        audio = unzip_with_password(audio, password)[0]\n",
+    "\n",
+    "    audio = Audio(\n",
+    "        source = audio,\n",
+    "        start_time=start_time,\n",
+    "        end_time=end_time,\n",
+    "        download_format=download_format,\n",
+    "        password=password,\n",
+    "    )\n",
+    "\n",
+    "    audio.verify_upload = False\n",
+    "    audio._load_audio()\n",
+    "\n",
+    "    download_model(model_size)\n",
+    "\n",
+    "    result = process_isolator(\n",
+    "        _transcribe,\n",
+    "        ASR_PROGRESS_FILE,\n",
+    "        audio,\n",
+    "    )\n",
+    "\n",
+    "    files_to_download.extend(result.values())\n",
+    "\n",
+    "    if diarization:\n",
+    "        diarized_txt = _diarize()\n",
+    "        files_to_download.append(diarized_txt)\n",
+    "\n",
+    "        print(\"Writing to docx.\")\n",
+    "        from whisper_asr_colab.docx_generator import DocxGenerator\n",
+    "        doc = DocxGenerator()\n",
+    "        doc.txt_to_word(diarized_txt)\n",
+    "        files_to_download.append(doc.docfilename)\n",
+    "\n",
+    "    if audio.is_remote:\n",
+    "        # Add audio file to files_to_download\n",
+    "        audio_file = _convert_audio_if_needed()\n",
+    "        files_to_download.append(audio_file)\n",
+    "\n",
+    "    # Download files\n",
+    "    from whisper_asr_colab.common.utils import download_from_colab\n",
+    "    for file in files_to_download:\n",
+    "        print(f\"Downloading {file}\")\n",
+    "        download_from_colab(file)\n"
    ]
   }
  ],
