--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -7,7 +7,7 @@
     "id": "view-in-github"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/pneuly/whisper-asr-colab/blob/main/whisper_asr_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/pneuly/whisper-asr-colab/blob/develop/whisper_asr_colab_ja.ipynb\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -18,92 +18,197 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import logging\n",
     "import locale\n",
-    "from torch.cuda import empty_cache\n",
+    "import functools\n",
     "from google.colab import files\n",
     "\n",
     "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
+    "os.environ[\"UV_PRERELEASE\"] = \"if-necessary-or-explicit\"\n",
+    "os.environ[\"UV_SYSTEM_PYTHON\"] = \"true\"\n",
+    "os.environ[\"UV_NO_PROGRESS\"] = \"true\"\n",
+    "for var in [\"UV_BUILD_CONSTRAINT\", \"UV_CONSTRAINT\"]:\n",
+    "    os.environ.pop(var, None)\n",
     "\n",
-    "# @title 自動文字起こし{ display-mode: \"form\" }\n",
+    "# Avoid unnecessary downgrades\n",
+    "with open(\"override.txt\", \"w\") as f:\n",
+    "    f.writelines(\"\"\"nvidia-cudnn-cu12\n",
+    "nvidia-cublas-cu12\n",
+    "nvidia-cuda-cupti-cu12\n",
+    "nvidia-cuda-nvrtc-cu12\n",
+    "nvidia-cuda-runtime-cu12\n",
+    "nvidia-cufft-cu12\n",
+    "nvidia-curand-cu12\n",
+    "nvidia-cusolver-cu12\n",
+    "nvidia-cusparse-cu12\n",
+    "nvidia-nvjitlink-cu12\n",
+    "nvidia-nccl-cu12\n",
+    "numpy\n",
+    "opentelemetry-api\n",
+    "opentelemetry-sdk\n",
+    "opentelemetry-semantic-conventions\n",
+    "opentelemetry-exporter-otlp-proto-common\n",
+    "opentelemetry-exporter-otlp-proto-http\n",
+    "opentelemetry-proto\n",
+    "\"\"\")\n",
+    "os.environ[\"UV_OVERRIDE\"] = \"override.txt\"\n",
+    "\n",
+    "# @title 自動文字起こし（[Source Code](https://github.com/pneuly/whisper-asr-colab)）{ display-mode: \"form\" }\n",
+    "# @markdown <font color=\"red\">以下の設定項目を入力しセルを実行（Ctrl+Enter）</font><br>\n",
+    "# ※<b>正常に文字起こしができない場合はstart_time、end_timeを指定して音声を分割して下さい</b>\n",
+    "# @markdown <b>（設定項目の説明は下にあります）</b></br>\n",
+    "\n",
     "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
+    "password = \"\"  # @param {type:\"string\"}\n",
+    "download_format = \"mp3\"  # @param [\"\", \"mp3\", \"m4a\", \"aac\", \"vorbis\", \"opus\", \"wav\"] {allow-input: true}\n",
     "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
     "diarization = True  # @param {type:\"boolean\"}\n",
-    "password = \"\"  # @param {type:\"string\"}\n",
     "start_time = \"\"  # @param {type:\"string\"}\n",
     "end_time = \"\"  # @param {type:\"string\"}\n",
     "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
     "skip_silence = True  # @param {type:\"boolean\"}\n",
-    "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
-    "batch_size = 1 # @param {type:\"number\"}\n",
-    "realtime = False  # @param {type:\"boolean\"}\n",
-    "HUGGING_FACE_TOKEN = \"\"\n",
+    "hotwords = \"次に、これです。\" #  {type:\"string\"}\n",
+    "batch_size = 1 #  {type:\"number\"}\n",
+    "realtime = False  #  {type:\"boolean\"}\n",
+    "HUGGING_FACE_TOKEN = \"\"  # @param {type:\"string\"}\n",
     "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
     "prefix = None\n",
     "vad_filter = False\n",
+    "files_to_download = []\n",
     "\n",
     "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
-    "# @markdown <b>audiopath:</b> 文字起こしする音声ファイルの場所<br/>\n",
-    "# @markdown 　　Youtubeの場合： https://www.youtube.com/......<br/>\n",
-    "# @markdown 　　手動で音声をアップロードした場合： 230401_1010.mp3 など<br/>\n",
+    "# @markdown <b>audio:</b> 文字起こしする音声ファイルの場所<br/>\n",
+    "# @markdown 　（例）https://www.youtube.com/...... ：Youtube<br/>\n",
+    "# @markdown　　　　230401_1010.mp3 ：手動でアップロードしたファイル<br/>\n",
+    "# @markdown　　　　<font color=\"red\">空欄にするとアップロードボタンが表示されます。リリースフォルダからファイルをアップロードしてください</font>\n",
+    "# @markdown <br/><b>download_format:</b> Youtube等からダウンロードする際の音声ファイル形式\n",
     "# @markdown <br/><b>model_size:</b> 音声認識のモデルサイズ\n",
     "# @markdown <br/><b>diarization:</b> 発言者別の文字起こしファイルを作成するか\n",
     "# @markdown #### <br/><b><font color= \"blue\">以下は必要な場合のみ設定</font></b>\n",
-    "# @markdown <b>password:</b> パスワードを指定（Webexなど）</b>\n",
-    "# @markdown <br/><b>start_time:</b> 開始時間 hh:mm:ss</b>（指定しない場合は最初から）\n",
-    "# @markdown <br/><b>end_time:</b> 終了時間 hh:mm:ss（指定しない場合は最後まで）\n",
-    "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（指定しない場合はstart_timeと連動）\n",
+    "# @markdown <br/><b>password:</b> 音声DL時のパスワード（Webexなど）/音声をパスワード付きzipでアップロードした場合のzipパスワード</b>\n",
+    "# @markdown <br/><b>start_time:</b> 開始時間 秒 or hh:mm:ss</b>（指定しない場合は最初から）\n",
+    "# @markdown <br/><b>end_time:</b> 終了時間 秒 or hh:mm:ss（指定しない場合は最後まで）\n",
+    "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす 秒 or hh:mm:ss（指定しない場合はstart_timeと連動）\n",
     "# @markdown <br/><b>skip_silence:</b> 先頭と最後の無音区間を削除\n",
-    "# @markdown <br/><b>hotwords:</b> キーワード（次に、これです。は句読点を付けるために入れています。）\n",
-    "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。1の場合と2以上の場合で文字起こし結果が変わります。\n",
-    "# @markdown <br/><b>reatime: </b>ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
+    "## @markdown <br/><b>hotwords:</b> キーワード（次に、これです。は句読点を付けるために入れています。）\n",
+    "## @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。1の場合と2以上の場合で文字起こし結果が変わります。\n",
+    "## @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
     "\n",
     "# ----- main routine ------\n",
+    "logging.getLogger().setLevel(logging.WARNING)\n",
     "logger = logging.getLogger(__name__)\n",
-    "logger.setLevel(logging.WARNING)\n",
+    "#logger.setLevel(logging.DEBUG)\n",
     "if not logger.hasHandlers():\n",
     "    logger.addHandler(logging.StreamHandler())\n",
     "\n",
     "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
     "    raise ValueError(\"HUGGING_FACE_TOKEN にトークンを入力してください\")\n",
     "\n",
-    "if audio == \"\":\n",
-    "    audio = list(files.upload())[0]\n",
+    "def remote_log_deco(session_id):\n",
+    "    def deco(func):\n",
+    "        @functools.wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            result = func(*args, **kwargs)\n",
+    "            return result\n",
+    "        return wrapper\n",
+    "    return deco\n",
     "\n",
-    "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
-    "!pip install ctranslate2==4.4.0\n",
-    "from whisper_asr_colab.worker import Worker # noqa: E402\n",
-    "from whisper_asr_colab.audio import Audio  # noqa: E402\n",
+    "def _transcribe(audio):\n",
+    "    from whisper_asr_colab.asr import ASRWorker\n",
+    "    worker = ASRWorker(\n",
+    "        audio=audio,\n",
+    "        load_model_args={\"model_size_or_path\" : model_size,},\n",
+    "        transcribe_args={\n",
+    "            \"language\" : \"ja\",\n",
+    "            \"initial_prompt\" : initial_prompt,\n",
+    "            \"batch_size\" : batch_size,\n",
+    "            \"hotwords\" : hotwords,\n",
+    "            \"prefix\" : prefix,\n",
+    "            \"vad_filter\" : False,}\n",
+    "    )\n",
     "\n",
-    "audio = Audio.from_path_or_url(audio)\n",
-    "if start_time:\n",
-    "    audio.start_time = start_time\n",
-    "if end_time:\n",
-    "    audio.end_time = end_time\n",
+    "    if timestamp_offset:\n",
+    "        worker.timestamp_offset = timestamp_offset\n",
+    "    results = worker.run()\n",
+    "    # gc GPU RAM\n",
+    "    del worker\n",
+    "    return results\n",
     "\n",
-    "worker = Worker(\n",
-    "    audio=audio,\n",
-    "    model_size=model_size,\n",
-    "    language=\"ja\",\n",
-    "    diarization=diarization,\n",
-    "    password=password,\n",
-    "    initial_prompt=initial_prompt,\n",
-    "    realtime=realtime,\n",
-    "    batch_size=batch_size,\n",
-    "    hugging_face_token=HUGGING_FACE_TOKEN,\n",
-    "    hotwords=hotwords,\n",
-    "    prefix=prefix,\n",
-    "    vad_filter=False,\n",
-    "    skip_silence=skip_silence,\n",
-    ")\n",
-    "if timestamp_offset:\n",
-    "    worker.timestamp_offset = timestamp_offset\n",
     "\n",
-    "worker.run()\n",
+    "def _diarize():\n",
+    "    !uv pip install pyannote.audio\n",
+    "    from whisper_asr_colab.diarize import DiarizationWorker # noqa: E402\n",
+    "    from torch.cuda import empty_cache\n",
+    "    empty_cache()\n",
+    "    diarizer = DiarizationWorker(\n",
+    "        audio=audio,\n",
+    "        hugging_face_token = HUGGING_FACE_TOKEN,\n",
+    "        )\n",
+    "    return diarizer.run()\n",
     "\n",
-    "# gc GPU RAM\n",
-    "del worker\n",
-    "empty_cache()"
+    "\n",
+    "def _convert_audio_if_needed():\n",
+    "    from whisper_asr_colab.audio import convert_audio\n",
+    "    return convert_audio(audio.local_file_path, download_format)\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    !uv pip install git+https://github.com/pneuly/whisper-asr-colab.git@develop\n",
+    "\n",
+    "    from whisper_asr_colab.audio import Audio # noqa: E402\n",
+    "    from whisper_asr_colab.common import unzip_with_password, process_isolator\n",
+    "    from whisper_asr_colab.asr import ASR_PROGRESS_FILE\n",
+    "    from faster_whisper.utils import download_model\n",
+    "\n",
+    "    if audio == \"\":\n",
+    "        audio = list(files.upload())[0]\n",
+    "\n",
+    "    if isinstance(audio, str) and audio.endswith('.zip'):\n",
+    "        audio = unzip_with_password(audio, password)[0]\n",
+    "\n",
+    "    audio = Audio(\n",
+    "        source = audio,\n",
+    "        start_time=start_time,\n",
+    "        end_time=end_time,\n",
+    "        download_format=download_format,\n",
+    "        password=password,\n",
+    "    )\n",
+    "\n",
+    "    audio.verify_upload = False\n",
+    "    audio._load_audio()\n",
+    "\n",
+    "    download_model(model_size)\n",
+    "\n",
+    "    result = process_isolator(\n",
+    "        _transcribe,\n",
+    "        ASR_PROGRESS_FILE,\n",
+    "        audio,\n",
+    "    )\n",
+    "\n",
+    "    files_to_download.extend(result.values())\n",
+    "\n",
+    "    if diarization:\n",
+    "        diarized_txt = _diarize()\n",
+    "        files_to_download.append(diarized_txt)\n",
+    "\n",
+    "        print(\"Writing to docx.\")\n",
+    "        from whisper_asr_colab.docx_generator import DocxGenerator\n",
+    "        doc = DocxGenerator()\n",
+    "        doc.txt_to_word(diarized_txt)\n",
+    "        files_to_download.append(doc.docfilename)\n",
+    "\n",
+    "    if audio.is_remote:\n",
+    "        # Add audio file to files_to_download\n",
+    "        audio_file = _convert_audio_if_needed()\n",
+    "        files_to_download.append(audio_file)\n",
+    "\n",
+    "    # Download files\n",
+    "    from whisper_asr_colab.common.utils import download_from_colab\n",
+    "    for file in files_to_download:\n",
+    "        print(f\"Downloading {file}\")\n",
+    "        download_from_colab(file)\n"
    ]
   }
  ],
