--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -46,6 +46,13 @@
     "nvidia-cusparse-cu12\n",
     "nvidia-nvjitlink-cu12\n",
     "nvidia-nccl-cu12\n",
+    "numpy\n",
+    "opentelemetry-api\n",
+    "opentelemetry-sdk\n",
+    "opentelemetry-semantic-conventions\n",
+    "opentelemetry-exporter-otlp-proto-common\n",
+    "opentelemetry-exporter-otlp-proto-http\n",
+    "opentelemetry-proto\n",
     "\"\"\")\n",
     "os.environ[\"UV_OVERRIDE\"] = \"override.txt\"\n",
     "\n",
